# libs

./: .gitignore  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
build_dl/: Makefile  Makefile.am  test.c
build_mem/: Makefile  Makefile.am
bytes/: bytes.cpp  bytes.h  throws.h
bytes/.deps/: bytes.Po
dl/: dl.cpp  dl.h
inject/: EXAMPLE.txt  inject.c  inject.h
mem/: mem.cpp  mem.h
mem/.deps/: mem.Po
test/: changemem.cpp  dlload.cpp
test/.deps/: changemem.Po
utils/: utils.cpp  utils.h
utils/.deps/: utils.Po
